# LangChain

./: README.md  main.py  pyproject.toml  requirements.txt
1_LangchainBasics/: Tools_in_Langchain.ipynb  langchain_app.py  langchain_with_lllm.ipynb
